fixed overflow of really long links, updated title and favicon

--- a/src/index.css
+++ b/src/index.css
@@ -611,6 +611,8 @@ header {
 .link-item .original-link {
   padding: 1rem;
   border-bottom: 1px solid hsl(var(--gray));
+  width: 100%;
+  word-break: break-all;
 }
 
 .shortened-container {
